--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
 .navbar {
     padding: 0rem 1rem;
     text-align: center;
+    font-family: 'Black Ops One', cursive;
 }
 
 .navbar-brand img {
@@ -55,7 +56,7 @@ body {
 }
 
 .navbar-brand {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -742,6 +743,22 @@ body {
         height: 1200px;
     }
 }
+@media (min-width:400px){
+    .div_titulo{
+        font-size: 45px;
+    }
+    .contenedor__items--titulo2{
+        font-size: 55px;
+        margin-top: 20px;
+    }
+    .article__2--titulo3{
+        margin-top: 20px;
+        font-size: 60px;
+    }
+    .quienessomos__article {
+        height: 1430px;
+    }
+}
 
 @media (min-width:414px) {
     .quienessomos__article--conceptos {
@@ -838,14 +855,16 @@ body {
     .quienessomos__article--conceptos {
         font-size: 25.5px;
     }
-
+    .quienessomos__article{
+        height: 1500px;
+    }
     .quienessomos__article2 {
         height: 1000px;
     }
 
     .quienessomos__article2--h2 {
-        background-image: url("imagenes/omakase2.png");
-        height: 550px;
+        height: 500px;
+        margin-top: 10px;
         background-size: 100% 100%;
         background-position: center;
         border: 0 3px solid #000;
@@ -1032,12 +1051,17 @@ body {
     }
 
     .footer__logo img {
-        width: px;
-        height: 190px;
+        height: 200px;
     }
 
     .footer_div--formulario {
         margin-top: 300px;
+    }
+    .quienessomos__article{
+        height: 1460px;
+    }
+    .quienessomos__article2{
+        height: 850px;
     }
 
     .quienessomos__article--conceptos {
